# petstore-mcp

./: .env.example  .gitignore  .mcp.json  .prettierrc  404.html  README.md  SECURITY.md  docker-compose.llm.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/workflows/: ci.yml  docs.yml  release.yml
architecture/: index.html
configuration/: index.html
deployment-guide/: index.html
development-guide/: index.html
docs/: architecture.md  configuration.md  deployment-guide.md  development-guide.md  overview.md  resources.md  tools.md  validation-notebook.ipynb  validation.md
overview/: index.html
resources/: index.html
scripts/: agent_with_mcp.py  call_mcp_server.py  llm_agent_with_mcp.py  llm_agent_with_running_mcp.py  validate_mcp.py
search/: search_index.json
src/petstore_mcp/: __init__.py  __main__.py  client.py  config.py  logging_config.py  resources.py  schemas.py  server.py  tools.py
tests/petstore_mcp/: test_config.py  test_mcp_stdio_integration.py  test_resources.py  test_server.py  test_tools.py
tools/: index.html
